2012-11-29  James Hunt  <james.hunt@ubuntu.com>

	* General tidy-up (removing unused variables, etc).

	[ Dave Love <fx@gnu.org> ]
	* Makefile.am: Add man page to man1_MANS for RHEL package build.
	* src/procenv.c: show_locale(): Load locale from the
	  environment prior to querying, and revert at end.

2012-11-28  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1: Update for --threads and set date.
	* src/procenv.c: get_platform(): Correction for detecting ARMHF.

2012-11-28  James Hunt  <james.hunt@ubuntu.com>
	
	* src/procenv.c:
	  - get_thread_scheduler_name(): Make visible to non-Linux platforms.
	  - get_platform(): Fix for Hurd.
	  - show_clocks(): Fix for Hurd.
	* src/procenv.h:
	  - Fix to gross Hurd hack.
	  - Make visible to non-Linux platforms.
	  - show_clock_res(): Make resilient to failure.
	
2012-11-26  James Hunt  <james.hunt@ubuntu.com>
	
	* TODO: Update.
	* configure.ac: Add pthread.
	* man/procenv.1: Formatting.
	* src/procenv.c:
	  - usage(): Added -T and --threads option.
	  - get_misc(): Minor Hurd tweak.
	  - get_user_info(): Added check around prctl.
	  - init(): Call gte_uname() as early as possible to allow
	    LINUX_KERNEL_*() macros to work.
	  - dump(): Add show_threads().
	  - show_capabilities(): Put kernel version guard around
	    PR_GET_KEEPCAPS.
	  - get_thread_scheduler_name(): New function.
	  - show_linux_scheduler(): Disallow failure.
	  - show_linux_cpu(): Disallow failure.
	  - show_threads(): New function.
	  - main():
	  - Added --threads option.
	  - Call get_uname() for '-i'.
	* src/procenv.h: Added pthread.h and minor tweak for Hurd.
	
2012-11-22  James Hunt  <james.hunt@ubuntu.com>
	
	* src/tests/show_compiler_details: New test to dump out useful info
	  as an aid to debugging build failures and for general interest.
	* src/Makefile.am: Call show_compiler_details test before running
	  main binary such that we can use the new tests output to diagnose
	  failures with the main binary.
	* src/procenv.h: