@@ -4,8 +4,13 @@
 
 	[ Dave Love <fx@gnu.org> ]
 	* Makefile.am: Add man page to man1_MANS for RHEL package build.
-	* src/procenv.c: show_locale(): Load locale from the
-	  environment prior to querying, and revert at end.
+	* src/procenv.c:
+	  - show_locale(): Load locale from the environment prior to
+	    querying, and revert at end.
+	  - show_linux_cpu(): Guard sched_getcpu().
+	* src/procenv.h: show_capability(): Make NOP if PR_CAPBSET_READ
+	  not available.
+	* configure.ac: Add sched_getcpu to list of AC_CHECK_FUNCS.
 
 2012-11-28  James Hunt  <james.hunt@ubuntu.com>
 
